Adjust leader report access and staff approvals

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -28,17 +28,17 @@
                         <span class="nav-item-icon">&#128200;</span>
                         Dashboard
                     </a>
-                    <a href="/" class="nav-item">
+                    <a href="/" class="nav-item" id="newJobOrderNav">
                         <span class="nav-item-icon">&#128221;</span>
                         New Job Order
                     </a>
-                    <a href="/reports.html" class="nav-item">
+                    <a href="/reports.html" class="nav-item" id="reportsNav">
                         <span class="nav-item-icon">&#128202;</span>
                         Reports
                     </a>
                     <a href="/pending-approvals.html" class="nav-item">
                         <span class="nav-item-icon">&#128338;</span>
-                        Pending Approvals
+                        <span id="navApprovalLabel">Pending Approvals</span>
                         <span class="nav-item-badge" id="approvalsBadge" style="display: none;">0</span>
                     </a>
                 </div>
@@ -410,6 +410,33 @@
                 loadPendingCount();
             }
 
+            const isStaffOnly = !user.isAdmin && !user.isLeader;
+            const newJobNav = document.getElementById('newJobOrderNav');
+            if (newJobNav && isStaffOnly) {
+                newJobNav.style.display = 'none';
+            }
+
+            const reportsNav = document.getElementById('reportsNav');
+            if (reportsNav && isStaffOnly) {
+                reportsNav.style.display = 'none';
+            }
+
+            const navApprovalLabel = document.getElementById('navApprovalLabel');
+            if (navApprovalLabel && isStaffOnly) {
+                navApprovalLabel.textContent = 'My Signature Requests';
+            }
+
+            if (isStaffOnly) {
+                document.querySelectorAll('a[href="/reports.html"]').forEach(link => {
+                    link.style.display = 'none';
+                });
+                document.querySelectorAll('a[href="/"]').forEach(link => {
+                    link.style.display = 'none';
+                });
+            }
+
+            loadApprovalsBadgeCount();
+
             // Load dashboard data
             loadDashboardData();
         }
@@ -631,6 +658,32 @@
                 }
             } catch (error) {
                 console.error('Failed to load pending count');
+            }
+        }
+
+        async function loadApprovalsBadgeCount() {
+            const badge = document.getElementById('approvalsBadge');
+            if (!badge) return;
+
+            try {
+                const response = await fetch('/api/approvals/pending', { credentials: 'include' });
+                if (!response.ok) {
+                    badge.style.display = 'none';
+                    return;
+                }
+
+                const data = await response.json();
+                const pendingCount = (data.approvals || []).filter(approval => approval.status === 'pending').length;
+
+                if (pendingCount > 0) {
+                    badge.textContent = pendingCount;
+                    badge.style.display = 'inline';
+                } else {
+                    badge.style.display = 'none';
+                }
+            } catch (error) {
+                console.error('Failed to load approvals count:', error);
+                badge.style.display = 'none';
             }
         }
 
