--- a/web/pending-approvals.html
+++ b/web/pending-approvals.html
@@ -27,17 +27,17 @@
                         <span class="nav-item-icon">&#128200;</span>
                         Dashboard
                     </a>
-                    <a href="/" class="nav-item">
+                    <a href="/" class="nav-item" id="newJobOrderNav">
                         <span class="nav-item-icon">&#128221;</span>
                         New Job Order
                     </a>
-                    <a href="/reports.html" class="nav-item">
+                    <a href="/reports.html" class="nav-item" id="reportsNav">
                         <span class="nav-item-icon">&#128202;</span>
                         Reports
                     </a>
                     <a href="/pending-approvals.html" class="nav-item active">
                         <span class="nav-item-icon">&#128338;</span>
-                        Pending Approvals
+                        <span id="navApprovalLabel">Pending Approvals</span>
                         <span class="nav-item-badge" id="pendingCountBadge" style="display: none;">0</span>
                     </a>
                 </div>
@@ -91,6 +91,15 @@
 
             <!-- Page Content -->
             <div class="page-content">
+                <div class="alert alert-info mb-4" id="staffApprovalNotice" style="display: none;">
+                    <div class="alert-icon">&#128221;</div>
+                    <div class="alert-content">
+                        <div class="alert-title">Your Signature Requests</div>
+                        <div class="alert-message">
+                            Review the requests below and use Approve or Reject. Once you approve, the leader can generate the report.
+                        </div>
+                    </div>
+                </div>
                 <!-- Stats Grid -->
                 <div class="stats-grid mb-6" style="grid-template-columns: repeat(3, 1fr);">
                     <div class="stat-card" style="--stat-color: var(--warning);">
@@ -222,6 +231,32 @@
             if (currentUser.isAdmin) {
                 document.getElementById('adminSection').style.display = 'block';
             }
+
+            const isStaffOnly = !currentUser.isAdmin && !currentUser.isLeader;
+            const newJobNav = document.getElementById('newJobOrderNav');
+            if (newJobNav && isStaffOnly) {
+                newJobNav.style.display = 'none';
+            }
+
+            const reportsNav = document.getElementById('reportsNav');
+            if (reportsNav && isStaffOnly) {
+                reportsNav.style.display = 'none';
+            }
+
+            const navLabel = document.getElementById('navApprovalLabel');
+            if (navLabel && isStaffOnly) {
+                navLabel.textContent = 'My Signature Requests';
+            }
+
+            const staffNotice = document.getElementById('staffApprovalNotice');
+            if (staffNotice) {
+                staffNotice.style.display = isStaffOnly ? 'flex' : 'none';
+            }
+
+            if (isStaffOnly) {
+                document.querySelector('.page-title').textContent = 'My Signature Requests';
+                document.querySelector('.breadcrumb').innerHTML = '<span>Home</span><span class="breadcrumb-separator">/</span><span>My Signature Requests</span>';
+            }
         }
 
         // =============================================================================
@@ -321,7 +356,9 @@
 
             const reportData = approval.reportData || {};
             const isCreator = approval.createdBy?.toLowerCase() === currentUser?.email?.toLowerCase();
-            const canGenerate = approval.status === 'approved' && (currentUser?.isAdmin || isCreator);
+            const isStaffApprover = approval.staffEmail?.toLowerCase() === currentUser?.email?.toLowerCase();
+            const canRespond = approval.status === 'pending' && isStaffApprover;
+            const canGenerate = approval.status === 'approved' && (currentUser?.isAdmin || currentUser?.isLeader || isCreator);
             const canDelete = currentUser?.isAdmin || isCreator;
 
             return `
@@ -364,6 +401,14 @@
                         </div>
 
                         <div class="flex gap-2 justify-end">
+                            ${canRespond ? `
+                                <button class="btn btn-success" onclick="respondToApproval('${approval.token}', 'approve')">
+                                    <span>&#9989;</span> Approve
+                                </button>
+                                <button class="btn btn-error" onclick="respondToApproval('${approval.token}', 'reject')">
+                                    <span>&#10060;</span> Reject
+                                </button>
+                            ` : ''}
                             ${canGenerate ? `
                                 <button class="btn btn-success" onclick="generateFromApproval('${approval.token}')">
                                     <span>&#128196;</span> Generate Report
@@ -398,6 +443,38 @@
                 window.location.href = '/?fromApproval=true';
             } catch (err) {
                 showToast('Failed to prepare report generation', 'error');
+            }
+        }
+
+        async function respondToApproval(token, action) {
+            const actionLabel = action === 'approve' ? 'approve' : 'reject';
+            if (!confirm(`Are you sure you want to ${actionLabel} this signature request?`)) return;
+
+            try {
+                const res = await fetch(`/api/approvals/respond/${token}`, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    credentials: 'include',
+                    body: JSON.stringify({ action })
+                });
+
+                const data = await res.json();
+
+                if (!res.ok) {
+                    throw new Error(data.error || 'Response failed');
+                }
+
+                const approval = allApprovals.find(a => a.token === token);
+                if (approval) {
+                    approval.status = data.status;
+                    approval.respondedAt = new Date().toISOString();
+                }
+
+                updateStats();
+                renderApprovals();
+                showToast(data.message || 'Response recorded', 'success');
+            } catch (error) {
+                showToast(error.message || 'Failed to respond', 'error');
             }
         }
 
