--- a/web/reports.html
+++ b/web/reports.html
@@ -93,7 +93,7 @@
 
             <!-- Page Content -->
             <div class="alert alert-info mb-4" id="reportsAccessNotice" style="display: none;">
-                <div class="alert-icon">&#128221;</div>
+                <div class="alert-icon"></div>
                 <div class="alert-content">
                     <div class="alert-title">Reports Access</div>
                     <div class="alert-message">
