--- a/web/index.html
+++ b/web/index.html
@@ -98,7 +98,7 @@
             <!-- Page Content -->
             <div class="page-content">
                 <div class="alert alert-info mb-4" id="staffNotice" style="display: none;">
-                    <div class="alert-icon">&#128221;</div>
+                    <div class="alert-icon"></div>
                     <div class="alert-content">
                         <div class="alert-title">Signature Requests Only</div>
                         <div class="alert-message">
