Remove calendar emoji icons

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -139,7 +139,7 @@
                     </div>
 
                     <div class="stat-card" style="--stat-color: var(--info);">
-                        <div class="stat-card-icon info">&#128197;</div>
+                        <div class="stat-card-icon info"></div>
                         <div class="stat-card-content">
                             <div class="stat-card-title">This Month</div>
                             <div class="stat-card-value" id="monthlyOrders">0</div>
