--- a/web/index.html
+++ b/web/index.html
@@ -237,7 +237,7 @@
                             <div class="card">
                                 <div class="card-header">
                                     <div class="card-title">
-                                        <span class="card-title-icon">&#128197;</span>
+                                        <span class="card-title-icon"></span>
                                         Schedule
                                     </div>
                                 </div>
