--- a/web/reports.html
+++ b/web/reports.html
@@ -186,7 +186,7 @@
                         </div>
                     </div>
                     <div class="stat-card" style="--stat-color: var(--warning);">
-                        <div class="stat-card-icon warning">&#128197;</div>
+                        <div class="stat-card-icon warning"></div>
                         <div class="stat-card-content">
                             <div class="stat-card-title">This Month</div>
                             <div class="stat-card-value" id="statMonth">0</div>
