--- a/web/approval-review.html
+++ b/web/approval-review.html
@@ -216,7 +216,7 @@
             <!-- Content (hidden initially) -->
             <div id="reviewContent" style="display: none;">
                 <div class="review-header">
-                    <div class="review-header-icon">&#9999;</div>
+                    <div class="review-header-icon"></div>
                     <h1>Signature Approval Request</h1>
                     <p id="headerSubtext">Review the details below and respond</p>
                 </div>
@@ -239,7 +239,7 @@
             <!-- Error State -->
             <div id="errorState" style="display: none;">
                 <div class="status-message">
-                    <div class="status-icon error">&#10060;</div>
+                    <div class="status-icon error"></div>
                     <div class="status-title" id="errorTitle">Error</div>
                     <div class="status-description" id="errorDescription">Something went wrong.</div>
                 </div>
@@ -310,7 +310,7 @@
                 document.getElementById('reviewBody').innerHTML = `
                     <div class="status-message" style="padding: 24px 0;">
                         <div class="status-icon ${approval.status === 'approved' ? 'success' : 'error'}">
-                            ${approval.status === 'approved' ? '&#9989;' : '&#10060;'}
+                            ${approval.status === 'approved' ? '' : ''}
                         </div>
                         <div class="status-title">
                             ${approval.status === 'approved' ? 'Request Approved' : 'Request Rejected'}
@@ -382,7 +382,7 @@
                     <div class="info-section-title">Signature Information</div>
                     <div style="display: flex; gap: 16px; align-items: center; background: var(--bg-tertiary); padding: 16px; border-radius: 8px;">
                         <div style="width: 48px; height: 48px; background: var(--primary-100); color: var(--primary); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-size: 20px;">
-                            &#128274;
+                            
                         </div>
                         <div>
                             <div style="font-weight: 500; color: var(--text-primary); margin-bottom: 4px;">Leader's Signature Protected</div>
@@ -398,10 +398,10 @@
                     </p>
                     <div class="action-buttons">
                         <button class="btn btn-success" onclick="respond('approve')" id="approveBtn">
-                            <span>&#9989;</span> Approve
+                            Approve
                         </button>
                         <button class="btn btn-danger" onclick="respond('reject')" id="rejectBtn">
-                            <span>&#10060;</span> Reject
+                            Reject
                         </button>
                     </div>
                 </div>
@@ -438,7 +438,7 @@
                 document.getElementById('reviewBody').innerHTML = `
                     <div class="status-message" style="padding: 24px 0;">
                         <div class="status-icon ${isApproved ? 'success' : 'warning'}">
-                            ${isApproved ? '&#9989;' : '&#10060;'}
+                            ${isApproved ? '' : ''}
                         </div>
                         <div class="status-title">
                             ${isApproved ? 'Signature Approved' : 'Request Rejected'}
