--- a/web/pending-approvals.html
+++ b/web/pending-approvals.html
@@ -24,19 +24,15 @@
                 <div class="nav-section">
                     <div class="nav-section-title">Main Menu</div>
                     <a href="/dashboard.html" class="nav-item">
-                        <span class="nav-item-icon">&#128200;</span>
                         Dashboard
                     </a>
                     <a href="/" class="nav-item" id="newJobOrderNav">
-                        <span class="nav-item-icon">&#128221;</span>
                         New Job Order
                     </a>
                     <a href="/reports.html" class="nav-item" id="reportsNav">
-                        <span class="nav-item-icon">&#128202;</span>
                         Reports
                     </a>
                     <a href="/pending-approvals.html" class="nav-item active">
-                        <span class="nav-item-icon">&#128338;</span>
                         <span id="navApprovalLabel">Pending Approvals</span>
                         <span class="nav-item-badge" id="pendingCountBadge" style="display: none;">0</span>
                     </a>
@@ -45,7 +41,6 @@
                 <div class="nav-section" id="adminSection" style="display: none;">
                     <div class="nav-section-title">Administration</div>
                     <a href="/admin.html" class="nav-item">
-                        <span class="nav-item-icon">&#9999;</span>
                         Signatures
                     </a>
                 </div>
@@ -60,7 +55,7 @@
                     </div>
                 </div>
                 <button class="btn btn-ghost btn-full mt-2" id="logoutBtn" style="justify-content: flex-start; gap: 12px;">
-                    <span>&#128682;</span> Logout
+                    Logout
                 </button>
             </div>
         </aside>
@@ -70,9 +65,7 @@
             <!-- Top Bar -->
             <header class="top-bar">
                 <div class="top-bar-left">
-                    <button class="icon-btn mobile-menu-toggle" id="menuToggle" style="display: none;">
-                        &#9776;
-                    </button>
+                    <button class="icon-btn mobile-menu-toggle" id="menuToggle" style="display: none;">Menu</button>
                     <div>
                         <h1 class="page-title">Pending Approvals</h1>
                         <div class="breadcrumb">
@@ -84,7 +77,7 @@
                 </div>
                 <div class="top-bar-right">
                     <button class="btn btn-secondary btn-sm" onclick="loadApprovals()">
-                        <span>&#8635;</span> Refresh
+                        Refresh
                     </button>
                 </div>
             </header>
@@ -103,21 +96,21 @@
                 <!-- Stats Grid -->
                 <div class="stats-grid mb-6" style="grid-template-columns: repeat(3, 1fr);">
                     <div class="stat-card" style="--stat-color: var(--warning);">
-                        <div class="stat-card-icon warning">&#128338;</div>
+                        <div class="stat-card-icon warning"></div>
                         <div class="stat-card-content">
                             <div class="stat-card-title">Awaiting Response</div>
                             <div class="stat-card-value" id="statPending">0</div>
                         </div>
                     </div>
                     <div class="stat-card" style="--stat-color: var(--success);">
-                        <div class="stat-card-icon success">&#9989;</div>
+                        <div class="stat-card-icon success"></div>
                         <div class="stat-card-content">
                             <div class="stat-card-title">Approved</div>
                             <div class="stat-card-value" id="statApproved">0</div>
                         </div>
                     </div>
                     <div class="stat-card" style="--stat-color: var(--error);">
-                        <div class="stat-card-icon error">&#10060;</div>
+                        <div class="stat-card-icon error"></div>
                         <div class="stat-card-content">
                             <div class="stat-card-title">Rejected</div>
                             <div class="stat-card-value" id="statRejected">0</div>
@@ -132,13 +125,13 @@
                             All Requests
                         </button>
                         <button class="tab" data-filter="pending">
-                            <span>&#128338;</span> Pending
+                            Pending
                         </button>
                         <button class="tab" data-filter="approved">
-                            <span>&#9989;</span> Approved
+                            Approved
                         </button>
                         <button class="tab" data-filter="rejected">
-                            <span>&#10060;</span> Rejected
+                            Rejected
                         </button>
                     </div>
 
@@ -283,7 +276,7 @@
             } catch (err) {
                 listDiv.innerHTML = `
                     <div class="empty-state">
-                        <div class="empty-state-icon">&#10060;</div>
+                        <div class="empty-state-icon"></div>
                         <div class="empty-state-title">Failed to Load</div>
                         <div class="empty-state-description">Unable to load approval requests. Please try again.</div>
                     </div>
@@ -320,7 +313,7 @@
             if (filtered.length === 0) {
                 listDiv.innerHTML = `
                     <div class="empty-state">
-                        <div class="empty-state-icon">&#128203;</div>
+                        <div class="empty-state-icon"></div>
                         <div class="empty-state-title">No Approval Requests</div>
                         <div class="empty-state-description">
                             ${currentFilter === 'all'
@@ -514,7 +507,7 @@
             const toast = document.createElement('div');
             toast.className = `toast ${type}`;
             toast.innerHTML = `
-                <span>${type === 'success' ? '&#9989;' : type === 'error' ? '&#10060;' : '&#9888;'}</span>
+                <span>${type === 'success' ? '' : type === 'error' ? '' : ''}</span>
                 <span>${message}</span>
             `;
             container.appendChild(toast);
